# dp-100-exam-app

./: .gitignore  .replit  README.md  app.py  examtopics_question_1.json  page-example.html  pyproject.toml  questions.json  questions_tmp.json  readme.md  requirements-dev.txt  requirements.txt  themes.py  verification.py
.streamlit/: config.toml
MS DP Personal notes/: 1 data assets.md  2 ML process.md  3 azure ml workspaces.md  4 creating experiments.md  5 fine tunning AutoML models.md  6 Register an MLflow model in Azure .md  7 Deploy and consume models.md  8 gen ai and azure ml.md
MS DP Personal notes/aux examples/: BlobStorage.md  yml-conda files.md
MS DP Personal notes/labs/MyLabs/: 1 Work with data.ipynb  5 Hyperparameter tuning.html  5a Run a pipeline job.html
attached_assets/: preguntasChatGPT.md
