[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dp-100-exam-app"
version = "0.0.0"
description = "Small repo to prepare for DP-100"
requires-python = ">=3.10"
dependencies = ["matplotlib>=3.10.1", "streamlit>=1.45.0"]

[project.optional-dependencies]
dev = [
  "black",
  "ruff",
]

[tool.setuptools.packages.find]
where = ["."]